force-app/main/default/objects/Win_Entry__c/Win_Entry__c.object-meta.xml
<CustomObject>
    <description>Stores individual win entries from daily journaling for PWA sync</description>
    <label>Win Entry</label>
    <pluralLabel>Win Entries</pluralLabel>
    <nameField>
        <displayFormat>WIN-{0000}</displayFormat>
        <label>Win Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>