force-app/main/default/objects/Win_Entry__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <description>Where the win was logged from (PWA, Salesforce, Mobile)</description>
    <type>Text</type>
    <length>50</length>
</CustomField>