force-app/main/default/objects/Win_Entry__c/fields/Win_Text__c.field-meta.xml
<CustomField>
    <fullName>Win_Text__c</fullName>
    <label>Win Text</label>
    <description>Description of the win/accomplishment</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>